Fix problems reported by FindBugs - Inconsistent synchronization - Exception is caught - Use xxx.valueOf instead of new xxx etc.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jcs/trunk@1157592 13f79535-47bb-0310-9956-ffa450edef68